<resources>
    <string name="app_name">Westeros</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="login_btn">Login</string>
    <string name="logout_btn">Logout</string>
    <string name="continue_google">Continue with Google</string>
    <string name="not_account">Don\'t have an account?</string>
    <string name="register_btn">Register</string>
    <string name="forgot_password">Forgot your Password?</string>
    <string name="next">Next</string>
    <string name="register_email">What\'s your email?</string>
    <string name="register_password">Create a password</string>

    <!-- Login Errors -->
    <string name="error_email_required">Email cannot be empty</string>
    <string name="error_email_invalid">Invalid Email</string>
    <string name="error_email_too_short">Email is too short</string>
    <string name="error_email_too_long">Email is too long</string>
    <string name="error_password_required">Password cannot be empty</string>
    <string name="error_password_too_short">Password must be at least 8 characters</string>
    <string name="error_password_too_long">Password cannot be longer than 20 characters</string>
    <string name="error_password_no_digit">Password must contain at least one digit</string>
    <string name="error_password_no_uppercase">Password must contain at least one uppercase letter</string>
    <string name="error_password_no_lowercase">Password must contain at least one lowercase letter</string>
    <string name="error_password_no_special">Password must contain at least one special character</string>

    <!-- Dialogs -->
    <string name="incorrect_data">Incorrect data</string>
    <string name="incorrect_data_message">The email or password is incorrect</string>
    <string name="register_error_title">Registration error</string>
    <string name="register_error_message">An error occurred while registering</string>

    <!-- Toast -->
    <string name="sign_in_success">Signed in as %s</string>
    <string name="register_success">Registered as %s</string>

    <!-- Google auth -->
    <string name="default_web_client_id">794757889511-c969odjsrn0nlnpsfnsi2u93uvpk104t.apps.googleusercontent.com</string>

    <!-- Bottom Navigation -->
    <string name="title_activity_app">AppActivity</string>
    <string name="title_characters">Characters</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>