<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.RegisterFragment">

    <data>
        <import type="android.view.View" />

        <import type="com.example.westeros.ui.login.RegisterStatus" />

        <variable
            name="viewModel"
            type="com.example.westeros.ui.login.RegisterViewModel" />

        <variable
            name="registerFragment"
            type="com.example.westeros.ui.login.RegisterFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/pastel_blue"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="@dimen/text_view_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/register_email"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="@dimen/text_field_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:hint="@string/email_label"
            android:textColor="@color/midnight_blue"
            android:textColorHint="@color/light_steel_blue"
            app:boxStrokeColor="@color/midnight_blue"
            app:endIconMode="clear_text"
            app:endIconTint="@color/light_steel_blue"
            app:errorEnabled="true"
            app:hintTextAppearance="?attr/textAppearanceBody1"
            app:hintTextColor="@color/midnight_blue"
            app:startIconDrawable="@drawable/alternate_email_24"
            app:startIconTint="@color/light_steel_blue"
            app:validationError="@{viewModel.emailError}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tf_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="@dimen/text_view_width"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/register_password"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="@dimen/text_field_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:hint="@string/password_label"
            android:textColor="@color/midnight_blue"
            android:textColorHint="@color/light_steel_blue"
            app:boxStrokeColor="@color/midnight_blue"
            app:endIconDrawable="@drawable/custom_password_toggle"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/light_steel_blue"
            app:errorEnabled="true"
            app:hintTextAppearance="?attr/textAppearanceBody1"
            app:hintTextColor="@color/midnight_blue"
            app:startIconDrawable="@drawable/password_24"
            app:startIconTint="@color/light_steel_blue"
            app:validationError="@{viewModel.passwordError}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tf_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/midnight_blue"
            android:paddingVertical="12dp"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:text="@string/register_btn" />

        <ProgressBar
            android:id="@+id/pb_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/midnight_blue"
            android:visibility="@{viewModel.registerStatus == RegisterStatus.LOADING ? View.VISIBLE : View.GONE}" />

    </LinearLayout>

</layout>